# telegram_bot_mp

./: pm.txt  pyproject.toml  requirements.txt
src/: telegram_bot.py
src/buttons/: __init__.py  client_buttons.py  pm_buttons.py  with_all_buttons.py
src/data_base/: base.py  q.py
src/data_base/model/: __init__.py  enums.py  file.py  jira.py  note.py  pm.py  task.py  task_in_jira.py  user.py
src/data_base/request_for_db/: __init__.py  change_db_pm.py  comment.py  filter.py  note.py  task.py  url_jira.py  utils.py  view_answer.py
src/handlers/: __init__.py
src/handlers/client/: __init__.py  task.py
src/handlers/pm/: __init__.py  action_pm.py  jira.py  note.py
src/handlers/with_all/: __init__.py  list_task.py  other.py
src/settings/: common.py
